--- a/package.json
+++ b/package.json
@@ -11,27 +11,27 @@
 		"lint": "eslint ."
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "next",
-		"@sveltejs/adapter-static": "^1.0.0-next.41",
-		"@sveltejs/kit": "next",
-		"@typescript-eslint/eslint-plugin": "^5.27.0",
-		"@typescript-eslint/parser": "^5.27.0",
-		"autoprefixer": "^10.4.8",
-		"eslint": "^8.16.0",
-		"eslint-plugin-svelte3": "^4.0.0",
-		"postcss": "^8.4.16",
+		"@sveltejs/adapter-auto": "^2.0.0",
+		"@sveltejs/adapter-static": "^2.0.3",
+		"@sveltejs/kit": "^1.20.4",
+		"@typescript-eslint/eslint-plugin": "^6.0.0",
+		"@typescript-eslint/parser": "^6.0.0",
+		"autoprefixer": "^10.4.15",
+		"eslint": "^8.28.0",
+		"eslint-plugin-svelte": "^2.30.0",
+		"postcss": "^8.4.29",
 		"postcss-load-config": "^4.0.1",
-		"sass": "^1.54.8",
-		"svelte": "^3.55.1",
-		"svelte-check": "^2.7.1",
-		"svelte-preprocess": "^4.10.7",
-		"tslib": "^2.3.1",
-		"typescript": "^4.9.5",
-		"vite": "^3.1.0-beta.1"
+		"sass": "^1.67.0",
+		"svelte": "^4.0.5",
+		"svelte-check": "^3.4.3",
+		"svelte-preprocess": "^5.0.4",
+		"tslib": "^2.4.1",
+		"typescript": "^5.0.0",
+		"vite": "^4.4.2"
 	},
 	"type": "module",
 	"dependencies": {
-		"@js-temporal/polyfill": "^0.4.2",
+		"@js-temporal/polyfill": "^0.4.4",
 		"@netlify/functions": "^1.2.0"
 	}
 }
