--- a/package.json
+++ b/package.json
@@ -18,9 +18,13 @@
 		"@typescript-eslint/parser": "^6.0.0",
 		"autoprefixer": "^10.4.15",
 		"eslint": "^8.28.0",
+		"eslint-config-prettier": "^9.0.0",
+		"eslint-plugin-prettier": "^5.0.0",
 		"eslint-plugin-svelte": "^2.30.0",
 		"postcss": "^8.4.29",
 		"postcss-load-config": "^4.0.1",
+		"prettier": "3.0.3",
+		"prettier-plugin-svelte": "^3.0.3",
 		"sass": "^1.67.0",
 		"svelte": "^4.0.5",
 		"svelte-check": "^3.4.3",
